# app.js
@@ -1,6 +1,6 @@
 const express = require("express");
 const app = express();
-var router1 = require("./apiRouter.js");
+var router = require("./routes/index");
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger_output.json');
 const { json } = require("express");
@@ -8,12 +8,23 @@ const port = process.env.PORT || 3000;
 const { Pool, Client } = require('pg');
 const db = require('./models');
 
+
+//Config body parse jSon
+var bodyParser = require('body-parser')
+app.use(bodyParser.urlencoded({ extended: false }))
+app.use(bodyParser.json())
+
+
 //  config Swagger 
 app.use(
   '/api-docs',
   swaggerUi.serve, 
   swaggerUi.setup(swaggerDocument)
 );
+const swaggerAutogen = require('swagger-autogen')()
+const outputFile = './swagger_output.json'
+const endpointsFiles = ['./app.js']
+swaggerAutogen(outputFile, endpointsFiles)
 
 // config database
 const pool = new Pool({
@@ -24,10 +35,6 @@ const pool = new Pool({
   port: 5432,
 })
  
-
-app.use('/admin/api/v1/',router1);
-app.use('/api/v1/',router1);
-
 // Add MiddleWare config Cors
 app.use((req,res,next) => {
 res.header('Access-Control-Allow-Origin','*');
@@ -35,41 +42,12 @@ res.header('Access-Control-Allow-Methods','GET,PUT,POST,DELETE');
 res.header('Access-Control-Allow-Headers','Content-Type');
 next();
 })
-
-
-const swaggerAutogen = require('swagger-autogen')()
-
-const outputFile = './swagger_output.json'
-const endpointsFiles = ['./app.js']
-
-swaggerAutogen(outputFile, endpointsFiles)
-
-
-
-// api Register/ Api Login
-app.post('/register',(req,res,next)=> {
-  var useName = req.body.useName;
-  var passWord = req.body.passWord;
-  console.log(useName + passWord);
-  return json('e');
-  })
   
-////Login 
-// Api Login
-app.post('/login',(req,res)=> {
-  var useName = req.body.useName;
-  var passWord = req.body.passWord;
-  console.log(useName + passWord);
-  })
-  
-app.get('/home',(req,res)=>{
-  pool.query('SELECT NOW()', (err, res) => {
-    console.log(err, res)
-    pool.end()
-    res.json('hihi12');
-  })
-})
+// Route
+app.use('/admin/',router);
+app.use('/',router);
 
+//force: true will drop the table if it already exists
 db.sequelize.sync().then((req)=>{
   app.listen(port, () => {
     console.log(`Example app listening at http://localhost:${port}`);
